# mag_sklad

./: .dockerignore  .env.example  .gitignore  .railwayignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_auth_indexes.py  0003_add_product_indexes.py  0004_add_business_indexes.py  0005_add_remaining_indexes.py
app/: config.py  database.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  business.py  locations.py  products.py  reports.py  sales.py  stocktake.py  supplies.py
app/core/: deps.py  exceptions.py  security.py
app/models/: __init__.py  business.py  enums.py  location.py  product.py  sale.py  stock.py  stocktake.py  supply.py  user.py
app/schemas/: __init__.py  business.py  location.py  product.py  report.py  sale.py  stock.py  stocktake.py  supply.py  user.py
app/services/: auth_service.py  business_service.py  location_service.py  product_service.py  report_service.py  sale_service.py  stocktake_service.py  supply_service.py
app/utils/: barcode_gen.py  email.py  excel_import.py  pagination.py  r2.py  telegram.py
docker/: Dockerfile
docker/nginx/: nginx.conf
